fixed header sub navi columns not left aligned

--- a/src/components/m-header-sub-navigation/index.scss
+++ b/src/components/m-header-sub-navigation/index.scss
@@ -113,7 +113,7 @@
 
   margin-left: -$header-sub-navigation__block-x-padding;
 
-  justify-content: center;
+  justify-content: flex-start;
 
   & + & > .m-header-sub-navigation__block {
     padding-top: $header-sub-navigation__block-padding-top--repeat;
